setting the javafx.