@@ -1,2 +1,5 @@
 # examen-practic
 Examen Practic
+
+java --module-path C:\Users\admin\IdeaProjects\rentauto\lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml --add-modules javafx.base,javafx.graphics -classpath C:\Users\admin\IdeaProjects\rentauto\target\classes ro.ubbcluj.rentauto.App
+java -jar --module-path C:\Users\admin\IdeaProjects\rentauto\lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml --add-modules javafx.base,javafx.graphics rent-auto-1.0-SNAPSHOT.jar
